Update DO model

--- a/notebook/do_with_wml.ipynb
+++ b/notebook/do_with_wml.ipynb
@@ -48,7 +48,7 @@
     "\n",
     "Install the [Watson Machine Learning client library](https://wml-api-pyclient-dev-v4.mybluemix.net/). This notebook uses the preview Python client based on v4 of Watson Machine Learning APIs. \n",
     "\n",
-    "> **Important** Do not load both Python client libraries into a notebook.\n"
+    "> **Important** Do not load both (v3 and v4) Python client libraries into a notebook.\n"
    ]
   },
   {
@@ -273,23 +273,19 @@
     "    places_vars = mdl.binary_var_dict(places, name='is_place')\n",
     "    link_vars = mdl.binary_var_matrix(places, postal_codes, 'link')\n",
     "\n",
-    "    # for place in places_objs:\n",
-    "    #   for postal in postal_codes:\n",
-    "    #     print(place.postal_code, postal)\n",
-    "    #     if place.postal_code != postal:\n",
-    "    #       print('not-equal')\n",
-    "    #       mdl.add_constraint(link_vars[place, postal] == 0, 'ct_forbid_{0!s}_{1!s}'.format(place, postal))\n",
+    "    for place in places:\n",
+    "        for postal in postal_codes:\n",
+    "            if place.postal_code != postal:\n",
+    "                mdl.add_constraint(link_vars[place, postal] == 0, 'ct_forbid_{0!s}_{1!s}'.format(place, postal))\n",
     "\n",
     "    mdl.add_constraints(\n",
-    "    mdl.sum(link_vars[place, postal] for place in places) == 1\n",
-    "        for postal in postal_codes\n",
+    "        mdl.sum(link_vars[place, postal] for place in places) == 1\n",
+    "            for postal in postal_codes\n",
     "    )\n",
     "\n",
-    "    # mdl.add_constraints(\n",
-    "    #   link_vars[place, postal] <= places_vars[place]\n",
-    "    #   for place in places_objs\n",
-    "    #   for postal in postal_codes\n",
-    "    # )\n",
+    "    mdl.add_constraints(\n",
+    "      link_vars[place, postal] <= places_vars[place] for place in places for postal in postal_codes\n",
+    "    )\n",
     "\n",
     "    mdl.add_constraint(mdl.sum(places_vars[place] for place in places) == number_sites)\n",
     "\n",
@@ -504,7 +500,7 @@
    "source": [
     "<br>\n",
     "\n",
-    "## Optional steps (to test the deployed model)\n",
+    "## Test the deployed model\n",
     "\n",
     "### Generate an API Key from the HERE Developer Portal\n",
     "\n",
@@ -532,7 +528,7 @@
    "source": [
     "<br>\n",
     "\n",
-    "Set up helper functions to query HERE API"
+    "Set up helper functions to query HERE APIs"
    ]
   },
   {
@@ -719,7 +715,59 @@
     "\n",
     "### Query HERE API for Places\n",
     "\n",
-    "Use the HERE API to get a list of Places in the vicinity of an address\n"
+    "Use the HERE API to get a list of Places in the vicinity of an address"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Example of `Place` entity returned by HERE API:\n",
+    "```json\n",
+    "  {\n",
+    "    'title': 'Duane Street Hotel',\n",
+    "    'id': 'here:pds:place:840dr5re-fba2a2b91f944ee4a699eea7556896bd',\n",
+    "    'resultType': 'place',\n",
+    "    'address': {\n",
+    "      'label': 'Duane Street Hotel, 130 Duane St, New York, NY 10013, United States',\n",
+    "      'countryCode': 'USA',\n",
+    "      'countryName': 'United States',\n",
+    "      'state': 'New York',\n",
+    "      'county': 'New York',\n",
+    "      'city': 'New York',\n",
+    "      'district': 'Tribeca',\n",
+    "      'street': 'Duane St',\n",
+    "      'postalCode': '10013',\n",
+    "      'houseNumber': '130'\n",
+    "    },\n",
+    "    'position': { 'lat': 40.71599, 'lng': -74.00735 },\n",
+    "    'access': [ { 'lat': 40.71608, 'lng': -74.00728 } ],\n",
+    "    'distance': 161,\n",
+    "    'categories': [\n",
+    "      { 'id': '100-1000-0000' },\n",
+    "      { 'id': '200-2000-0000' },\n",
+    "      { 'id': '500-5000-0000' },\n",
+    "      { 'id': '500-5000-0053' },\n",
+    "      { 'id': '500-5100-0000' },\n",
+    "      { 'id': '700-7400-0145' }\n",
+    "    ],\n",
+    "    'foodTypes': [ { 'id': '101-000' } ],\n",
+    "    'contacts': [ ],\n",
+    "    'openingHours': [\n",
+    "      {\n",
+    "        'text': [ 'Mon-Sun: 00:00 - 24:00' ],\n",
+    "        'isOpen': true,\n",
+    "        'structured': [\n",
+    "          {\n",
+    "            'start': 'T000000',\n",
+    "            'duration': 'PT24H00M',\n",
+    "            'recurrence': 'FREQ:DAILY;BYDAY:MO,TU,WE,TH,FR,SA,SU'\n",
+    "          }\n",
+    "        ]\n",
+    "      }\n",
+    "    ]\n",
+    "  }\n",
+    "```"
    ]
   },
   {
@@ -808,7 +856,7 @@
    "source": [
     "<br>\n",
     "\n",
-    "Submit a new job with the payload and the deployed model.  \n",
+    "Submit a new job with the payload and deployment.  \n",
     "Set the UID of the deployed model.\n"
    ]
   },
@@ -984,9 +1032,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "conda [dashenv]",
+   "display_name": "Python 3.6",
    "language": "python",
-   "name": "dashenv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -998,7 +1046,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
