Update model notebook

--- a/notebook/do_with_wml.ipynb
+++ b/notebook/do_with_wml.ipynb
@@ -48,7 +48,7 @@
     "\n",
     "Install the [Watson Machine Learning client library](https://wml-api-pyclient-dev-v4.mybluemix.net/). This notebook uses the preview Python client based on v4 of Watson Machine Learning APIs. \n",
     "\n",
-    "> **Important** Do not load both (v3 and v4) Python client libraries into a notebook.\n"
+    "> **Important** Do not load both (V3 and V4) WML API client libraries into a notebook.\n"
    ]
   },
   {
@@ -321,7 +321,7 @@
     "    places_df = inputs['places']    \n",
     "    routes_df = inputs['routes']\n",
     "\n",
-    "    site_suggestions = build_and_solve(places_df, routes_df, number_sites=3)\n",
+    "    site_suggestions = build_and_solve(places_df, routes_df)\n",
     "    solution_df = pandas.DataFrame(site_suggestions)\n",
     "\n",
     "    outputs = {}\n",
@@ -777,6 +777,7 @@
    "outputs": [],
    "source": [
     "address = 'New York, NY'\n",
+    "max_results = 20\n",
     "\n",
     "# HERE Place Category System\n",
     "# https://developer.here.com/documentation/geocoding-search-api/dev_guide/topics-places/places-category-system-full.html\n",
@@ -785,7 +786,7 @@
     "places = get_places_nearby(\n",
     "    address,\n",
     "    categories=places_categories,\n",
-    "    results_limit=20\n",
+    "    results_limit=max_results\n",
     ")\n",
     "\n",
     "print('name (postal code): distance')\n",
