--- a/notebook/do_with_wml.ipynb
+++ b/notebook/do_with_wml.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "The deployed model can later be accessed using the [Watson Machine Learning client library](https://wml-api-pyclient-dev-v4.mybluemix.net/) to find optimal location based on given constraints.\n",
     "\n",
-    "The model created here is a basic Decision Optimization model. The main purpose is to demonstrate creating a model and deploying using Watson Machine Learning. This model can and should be improved upon to include better constrainsts and provider better solutions.\n",
+    "The model created here is a basic Decision Optimization model. The main purpose is to demonstrate creating a model and deploying using Watson Machine Learning. This model can and should be improved upon to include better constraints that can provide a more optimal solution.\n",
     "\n",
     "\n",
     "## Steps\n",
